--- a/src/main/resources/templates/usuarios/formRegistro.html
+++ b/src/main/resources/templates/usuarios/formRegistro.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<html lang="en">
-  <head>
+<html xmlns:th="http://www.thymeleaf.org">
+ <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -8,16 +8,15 @@
     <link rel="icon" href="favicon.ico">
 
     <title>EmpleosApp | Formulario de Registro</title>
-    <!-- Bootstrap core CSS -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="bootstrap/css/jumbotron.css" rel="stylesheet">
-    <link href="bootstrap/css/sticky-footer-navbar.css" rel="stylesheet">
+    <link th:href="@{/bootstrap/css/jumbotron.css}" rel="stylesheet">
+    <link th:href="@{/bootstrap/css/sticky-footer-navbar.css}" rel="stylesheet">
   </head>
 
   <body>
 
-	<header th:insert="fragments/menu :: menu-principal"></header>
+	<header th:insert="fragments/menu :: menu-principal"></header>    
 
     <main role="main">     
       <hr>
@@ -68,7 +67,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script> 
-    <script src="bootstrap/js/bootstrap.min.js"></script>     
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>     
   </body>
 </html>
